# 11elo-sdk

./: .gitignore  LICENSE  PUBLISHING.md  README.md
.github/workflows/: ci.yml  split-php.yml
go/: README.md  elevenelo.go  elevenelo_test.go  errors.go  go.mod
javascript/: README.md  package.json
javascript/src/: client.test.js  index.js
python/: .gitignore  README.md  pyproject.toml
python/elevenelo/: __init__.py  client.py  exceptions.py
python/tests/: test_client.py
