[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elevenelo"
version = "0.1.0"
description = "Python client for the 11elo Soccer ELO API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["soccer", "football", "elo", "bundesliga", "api", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "requests>=2.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "responses>=0.24",
]

[project.urls]
Homepage = "https://11elo.com"
Documentation = "https://11elo.com/api-docs"
Repository = "https://github.com/Chafficui/11elo-clients"

[tool.setuptools.packages.find]
where = ["."]
include = ["elevenelo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
